--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Figtree', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgb(71,36,24);
+  background-color: rgb(251,232,194);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
