--- a/client/src/component_css/Signup.css
+++ b/client/src/component_css/Signup.css
@@ -3,7 +3,7 @@
     color: white;
 } 
 
-.spotify-form {
+.create-login-form {
     max-width: 300px;
     margin: 0 auto;
     padding: 20px;
@@ -12,7 +12,7 @@
     color: white;
 }
 
-.spotify-button {
+.create-login-button {
     background-color: rgb(216, 112, 43);
     border: none;
     width: 100%;
@@ -24,6 +24,6 @@
     transition: background-color 0.2s;
 }
 
-.spotify-button:hover {
+.create-login-button:hover {
     background-color: rgb(186, 95, 37);
 }
