--- a/client/src/component_css/NavbarContainer.css
+++ b/client/src/component_css/NavbarContainer.css
@@ -1,10 +1,10 @@
 .navbar-container {
     display: flex;
     font-size: 1.5rem;
-    margin: 0 auto;
+    margin: 1em 1em;
     padding: 10px 20px;
     border: 2px solid white;
-    max-width: 1200px;
+    max-width: auto;
     align-items: center;
 }
 
