--- a/client/src/component_css/NavbarContainer.css
+++ b/client/src/component_css/NavbarContainer.css
@@ -30,10 +30,15 @@
     margin-left: auto;
 }
 
-.navbar-link-container.active {
+.navbar-links-container a.active {
     color: var(--logo-color);
 }
 
+.navbar-links {
+    transition: transform .25s;
+}
+
 .navbar-links:hover {
+    transform: scale(1.05);
     color: var(--logo-color);
 }
