--- a/client/src/component_css/HomeLoggedOut.css
+++ b/client/src/component_css/HomeLoggedOut.css
@@ -17,6 +17,7 @@
 
 .home-logged-out-button {
     background-color: var(--logo-color);
+    text-decoration: none;
     border: none;
     width: 100%;
     padding: 20px;
