--- a/client/src/component_css/Signup.css
+++ b/client/src/component_css/Signup.css
@@ -4,15 +4,16 @@
 } 
 
 .create-signup-form {
+    font-size: 25px;
     max-width: 300px;
     margin: 0 auto;
+    margin-top: 150px;
     padding: 20px;
-    background-color: rgb(51, 49, 52);    /* You can set your desired background color here */
+    background-color: rgb(51, 49, 52);
     border-radius: 10px;
     color: white;
 }
-
-.create-signup-button {
+/* .create-signup-button {
     background-color: var(--logo-color);
     border: none;
     width: 100%;
@@ -26,4 +27,29 @@
 
 .create-signup-button:hover {
     background-color: var(--logo-color);
+} */
+
+.signup-username,
+.signup-password {
+    padding: 15px;
+    margin: 15px;
+}
+
+.create-signup-button {
+    background-color: var(--logo-color);
+    text-decoration: none;
+    border: none;
+    width: 100%;
+    padding: 20px;
+    margin: 30px;
+    font-size: large;
+    border-radius: 15px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    transition: transform 0.25s;
+}
+
+.create-signup-button:hover {
+    transform: scale(1.05);
 }
